# vitamin-model-checker

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  env.example  mkdocs.yml  pyproject.toml  requirements-base.txt
.github/workflows/: ci.yml
.vmi-integrated-modules/: IATL.json  ICTL.json  TCTL.json  TOL.json  Wallet_ATL.json
docker/: .dockerignore  Dockerfile  Makefile  README.md
docs/: adding_a_new_logic.md  architecture.md  contributing.md  deployment-ports.md  file_formats.md  index.md  logic_knowledge_base.md  vitamin-stack.md
docs/IATL/: algorithm.md
docs/ICTL/: algorithm.md
docs/TCTL/: algorithm.md
docs/TOL/: algorithm.md
docs/Wallet_ATL/: usage.md
docs/api/: model_checker.algorithms.explicit.ATL.md  model_checker.algorithms.explicit.ATLF.md  model_checker.algorithms.explicit.COTL.md  model_checker.algorithms.explicit.CTL.md  model_checker.algorithms.explicit.CapATL.md  model_checker.algorithms.explicit.LTL.md  model_checker.algorithms.explicit.NatATL.md  model_checker.algorithms.explicit.NatATLF.md  model_checker.algorithms.explicit.NatSL.md  model_checker.algorithms.explicit.OATL.md  model_checker.algorithms.explicit.OL.md  model_checker.algorithms.explicit.RABATL.md  model_checker.algorithms.explicit.RBATL.md  model_checker.algorithms.explicit.SolutionConcepts.md  model_checker.algorithms.explicit.md  model_checker.algorithms.explicit.shared.atom_utils.md  model_checker.algorithms.explicit.shared.bit_vector.md  model_checker.algorithms.explicit.shared.boolean_operators.md  model_checker.algorithms.explicit.shared.bound_utils.md  model_checker.algorithms.explicit.shared.fixpoint_iter.md  model_checker.algorithms.explicit.shared.md  model_checker.algorithms.explicit.shared.result_formatters.md  model_checker.algorithms.explicit.shared.result_utils.md  model_checker.algorithms.explicit.shared.state_utils.md  model_checker.algorithms.explicit.shared.strategies_base.md  model_checker.algorithms.explicit.shared.trace_utils.md  model_checker.algorithms.explicit.shared.verification_result.md  model_checker.algorithms.md  model_checker.engine.md  model_checker.md  model_checker.models.model_factory.md  model_checker.parsers.formula_parser_factory.md  model_checker.parsers.formulas.ATL.md  model_checker.parsers.formulas.ATLF.md  model_checker.parsers.formulas.CTL.md  model_checker.parsers.formulas.CapATL.md  model_checker.parsers.formulas.LTL.md  model_checker.parsers.formulas.NatATL.md  model_checker.parsers.formulas.NatATLF.md  model_checker.parsers.formulas.NatSL.md  (+16 more)
docs/pub/: pypi.md
model_checker/: __init__.py  api.py  api_integrated.py  ctl.json  discovery.py  registries.py  synthetic_models.py
model_checker/algorithms/: __init__.py
model_checker/algorithms/explicit/: __init__.py
model_checker/algorithms/explicit/ATL/: ATL.py  __init__.py  operators.py  preimage.py  solver.py
model_checker/algorithms/explicit/ATLF/: ATLF.py  __init__.py  operators.py  preimage.py  real_value_utils.py  solver.py
model_checker/algorithms/explicit/COTL/: COTL.py  __init__.py  operators.py  preimage.py  solver.py
model_checker/algorithms/explicit/CTL/: CTL.py  __init__.py  fixpoint.py  operators.py  operators_with_trace.py  preimage.py  solver.py  solver_with_trace.py
model_checker/algorithms/explicit/CapATL/: CapATL.py  __init__.py  combinatorics.py  knowledge.py  operators.py  preimage.py  solver.py  utils.py
model_checker/algorithms/explicit/IATL/: IATL.py  checker.py  iatl_model_checking.py  operators.py  preimage.py  solver.py
model_checker/algorithms/explicit/ICTL/: ICTL.py  __init__.py  checker.py  ictl_model_checking.py  operators.py  preimage.py  solver.py
model_checker/algorithms/explicit/LTL/: LTL.py  __init__.py  pruning.py  strategies.py
model_checker/algorithms/explicit/NatATL/: NatATLtoATL.py  NatATLtoCTL.py  natatl_ast.py
model_checker/algorithms/explicit/NatATLF/: NatATL.py  __init__.py  pruning.py  strategies.py
model_checker/algorithms/explicit/NatSL/: __init__.py  shared_recall.py
model_checker/algorithms/explicit/OATL/: OATL.py  __init__.py  operators.py  preimage.py  solver.py
model_checker/algorithms/explicit/OL/: OL.py  __init__.py  operators.py  preimage.py  solver.py
model_checker/algorithms/explicit/RABATL/: RABATL.py  __init__.py  operators.py  preimage.py  solver.py
model_checker/algorithms/explicit/RBATL/: RBATL.py  __init__.py  operators.py  preimage.py  solver.py
model_checker/algorithms/explicit/SolutionConcepts/: Solution_Concepts.py
model_checker/algorithms/explicit/TCTL/: TCTL.py  evaluators.py  operators.py  preimage.py  solver.py  tctl_model_checking.py
model_checker/algorithms/explicit/TOL/: TOL.py  operators.py  preimage.py  solver.py  tol_model_checking.py
model_checker/algorithms/explicit/Wallet_ATL/: Wallet_ATL.py  __init__.py  operators.py  preimage.py  solver.py
model_checker/benchmarking/: README.md  __init__.py  __main__.py  adapters.py  cases.py  cli.py  generators.py  plot_summary.py  runner.py  schemas.py
model_checker/contrib/: __init__.py  conformance.py  manifest_schema.py
model_checker/engine/: __init__.py  atl_prefilter.py  execution.py  runner.py
model_checker/knowledge/: __init__.py  builder.py
model_checker/models/: __init__.py  model_factory.py
model_checker/parsers/: __init__.py  formula_parser_factory.py  syntax_patterns.py
model_checker/parsers/formulas/: __init__.py  common_tokens.py  parser_utils.py  shared_parser.py
model_checker/parsers/game_structures/: __init__.py
model_checker/tests/: README.md  conftest.py  verify_benchmark_content.py
model_checker/tests/e2e/: test_full_workflows.py
model_checker/tests/helpers/: model_helpers.py
model_checker/tests/performance/: __init__.py  conftest.py  performance_helpers.py  test_atl_performance.py  test_capatl_performance.py  test_ctl_performance.py  test_ictl_performance.py  test_ltl_performance.py  test_natatl_performance.py  test_oatl_performance.py  test_scalability.py
model_checker/utils/: __init__.py  error_handler.py  formula_tree.py  literals.py
(+271 files in other folders)
