[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitamin-model-checker"
version = "1.6.0"
description = "The VITAMIN model checker python package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "VITAMIN Team"}
]
# Dependencies are specified in model_checker/requirements-base.txt
# Install with: pip install -r model_checker/requirements-base.txt
# Or use: pip install -e .[dev] for development dependencies
dependencies = [
    "setuptools>=61.0,<82",
    "automata-lib==6.0.2",
    "visual-automata==1.1.1",
    "networkx==2.8.6",
    "ply==3.11",
    "antlr4-python3-runtime==4.8.0",
    "binarytree==6.5.1",
    "anytree==2.8.0",
    "lxml>=6.0.2",
    "defusedxml>=0.7.1",
    "numpy>=1.26.0,<1.27.0",
    "requests>=2.32.5,<3.0.0",
    "validators==0.22.0",
    "semver==2.13.0",
    "prometheus-client==0.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.0.0",
]
bench = [
    "pyperf>=2.7.0",
]
bench-viz = [
    "matplotlib>=3.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
model_checker-benchmark = "model_checker.benchmarking.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_checker*"]
exclude = ["model_checker/tests*"]
# api packages are NOT included as they are a separate application,
# not part of the installable model_checker library package

[project.entry-points."vitamin.parsers"]
ATL = "model_checker.parsers.formulas.ATL.parser:ATLParser"
ATLF = "model_checker.parsers.formulas.ATLF.parser:ATLFParser"
CapATL = "model_checker.parsers.formulas.CapATL.parser:CapATLParser"
COTL = "model_checker.parsers.formulas.OATL.parser:OATLParser"
CTL = "model_checker.parsers.formulas.CTL.parser:CTLParser"
LTL = "model_checker.parsers.formulas.LTL.parser:LTLParser"
NatATL = "model_checker.parsers.formulas.NatATL.parser:NatATLParser"
NatATL_Recall = "model_checker.parsers.formulas.NatATL.parser:NatATLParser"
NatATLF = "model_checker.parsers.formulas.NatATLF.parser:NatATLFParser"
NatSL = "model_checker.parsers.formulas.NatSL.parser:NatSLParser"
NatSL_Sequential = "model_checker.parsers.formulas.NatSL.parser:NatSLParser"
NatSL_Alternated = "model_checker.parsers.formulas.NatSL.parser:NatSLParser"
OATL = "model_checker.parsers.formulas.OATL.parser:OATLParser"
OL = "model_checker.parsers.formulas.OL.parser:OLParser"
RABATL = "model_checker.parsers.formulas.RABATL.parser:RABATLParser"
RBATL = "model_checker.parsers.formulas.RBATL.parser:RBATLParser"

[project.entry-points."vitamin.models"]
CGS = "model_checker.parsers.game_structures.cgs.cgs:CGS"
costCGS = "model_checker.parsers.game_structures.cost_cgs.cost_cgs:costCGS"
capCGS = "model_checker.parsers.game_structures.cap_cgs.cap_cgs:capCGS"

[project.entry-points."vitamin.benchmarks"]
ATL = "model_checker.algorithms.explicit.ATL.ATL:model_checking"
ATLF = "model_checker.algorithms.explicit.ATLF.ATLF:model_checking"
CapATL = "model_checker.algorithms.explicit.CapATL.CapATL:model_checking"
COTL = "model_checker.algorithms.explicit.COTL.COTL:model_checking"
CTL = "model_checker.algorithms.explicit.CTL.CTL:model_checking"
LTL = "model_checker.algorithms.explicit.LTL.LTL:model_checking"
NatATL = "model_checker.algorithms.explicit.NatATL.Memoryless.NatATL:model_checking"
NatATL_Recall = "model_checker.algorithms.explicit.NatATL.Recall.natatl_recall:model_checking"
NatATLF = "model_checker.algorithms.explicit.NatATLF.NatATL:model_checking"
NatSL_Alternated = "model_checker.algorithms.explicit.NatSL.Alternated.natSL:model_checking"
NatSL_Sequential = "model_checker.algorithms.explicit.NatSL.Sequential.natSL:model_checking"
OATL = "model_checker.algorithms.explicit.OATL.OATL:model_checking"
OL = "model_checker.algorithms.explicit.OL.OL:model_checking"
RABATL = "model_checker.algorithms.explicit.RABATL.RABATL:model_checking"
RBATL = "model_checker.algorithms.explicit.RBATL.RBATL:model_checking"

[project.entry-points."vitamin.metadata"]
ATL = "model_checker.parsers.formulas.ATL:METADATA"
ATLF = "model_checker.parsers.formulas.ATLF:METADATA"
CapATL = "model_checker.parsers.formulas.CapATL:METADATA"
COTL = "model_checker.parsers.formulas.OATL:METADATA"
CTL = "model_checker.parsers.formulas.CTL:METADATA"
LTL = "model_checker.parsers.formulas.LTL:METADATA"
NatATL = "model_checker.parsers.formulas.NatATL:METADATA"
NatATLF = "model_checker.parsers.formulas.NatATLF:METADATA"
OATL = "model_checker.parsers.formulas.OATL:METADATA"
OL = "model_checker.parsers.formulas.OL:METADATA"
RABATL = "model_checker.parsers.formulas.RABATL:METADATA"
RBATL = "model_checker.parsers.formulas.RBATL:METADATA"

[tool.pytest.ini_options]
testpaths = ["model_checker/tests/unit", "model_checker/tests/integration", "model_checker/tests/e2e"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short --import-mode=importlib"
filterwarnings = [
    "ignore::UserWarning:binarytree",
    "ignore:.*pkg_resources.*::UserWarning",
    "ignore:.*pkg_resources.*declare_namespace.*:DeprecationWarning",
]
markers = [
    "asyncio: Async tests (pytest-asyncio)",
    "unit: Unit tests for individual functions/methods",
    "integration: Integration tests for multiple components working together",
    "all_models: Comprehensive integration tests that run across all model files (slow, many test cases)",
    "semantic: Semantic verification tests that check correctness against formal definitions",
    "parser: Tests for parsing functionality",
    "validation: Tests for validation logic",
    "model_checking: Tests for model checking algorithms",
    "edge_case: Tests for edge cases and error conditions",
    "robustness: Tests for robustness and error handling",
    "fixpoint: Tests for fixpoint convergence and iteration behavior",
    "performance: Performance tests for large state spaces and scalability",
    "slow: Tests that take a long time to run (can be skipped with -m \"not slow\")",
    "e2e: End-to-end workflow tests",
    "workflow: Workflow integration tests",
    "atl: ATL algorithm tests",
    "ctl: CTL algorithm tests",
    "ltl: LTL algorithm tests",
    "natatl: NatATL algorithm tests",
    "oatl: OATL algorithm tests",
    "capatl: CapATL algorithm tests",
    "shared: Shared utility tests",
    "complex: Complex formula tests"
]

# ==============================================================================
# Code Formatting - Black
# ==============================================================================
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude common directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  # Exclude parser generated files
  | parsetab\.py
  | parser\.out
)/
'''

# Import Sorting - isort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "**/parsetab.py",
    "**/parser.out",
    "**/__pycache__",
    "**/.venv",
    "**/venv",
    "**/build",
    "**/dist",
]

# Linting - Ruff
[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "parsetab.py",
    "parser.out",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
